# SignSystem

./: README.md
FaceRecognitionModule/: faces_model.xml
FaceRecognitionModule/client/: CMakeLists.txt  faceSignIn.cpp
FaceRecognitionModule/loadface/: CMakeLists.txt  loadface.cpp
FaceRecognitionModule/server/: CMakeLists.txt  classInfo.cpp
FaceRecognitionModule/server/tinyMysqlLib/: tinyMysql.cpp  tinyMysql.h
SignSystemModule/: config.py
SignSystemModule/app/: __init__.py  models.py  student.py  teacher.py
SignSystemModule/app/templates/student/: get_faces.html  student_home.html
SignSystemModule/app/templates/teacher/: teacher_home.html
